tests/compile-fail/Rule_9_3.rs
fn main() {
    let x: [i32; 3] = [0, 1];
    //~^ ERROR mismatched types
}
